@@ -1,5 +1,10 @@
 2006-03-08  Danilo Šegan  <danilo@gnome.org>
 
+	* gnome-modules.xml: Added glib, deskbar-applet.
+	* releases.xml.in: Updated.
+
+2006-03-08  Danilo Šegan  <danilo@gnome.org>
+
 	* translation-teams.xml.in: Uncomment and fill-up all entries.
 
 	* update-stats.py (LocStatistics.ui_l10n_stats): Clean-up warning 
